<resources>
    <string name="app_name">Ethiopian Proverbs and FolkTales</string>
    <string name="mainmenu">ዋና ማውጫ</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="updates_on_files">Updates on Files</string>
    <string name="favorites">Favorites</string>
    <string name="question_scores">Question Scores</string>
    <string name="home">Home</string>
    <string name="main_pages">Main Pages</string>
    <string name="sign_in">Sign In</string>
    <string name="light_dark">Light/Dark</string>
    <string name="opeingndrawer">Navigation Opener</string>
    <string name="closeDrawer">Navigation Closer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="underlinedText"><u>Lorem Ipsum Tittle</u></string>
    <string name="sapleQuestion"><b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder <b>THIS lorem ipusm </b>is the main thing if that wasn\'t appeadred to be place holder all sample text could of <u>seems like</u> sjkdfhskndfksfkbsdkjfskdjbfskjdhakefjoabjbe</string>
</resources>