<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/main_pages">

        <menu>

            <item android:id="@+id/home_item"
                android:title="@string/home"
                android:icon="@drawable/ic_home">

            </item>

            <item android:id="@+id/result_statics_item"
                android:title="@string/question_scores"
                android:icon="@drawable/ic_result_statics">

            </item>
        </menu>


    </item>
    <group android:checkableBehavior="single">

        <item android:id="@+id/favorites_item"
            android:title="@string/favorites"
            android:icon="@drawable/ic_favorites_star"/>


        <item android:id="@+id/update_item"
            android:title="@string/updates_on_files"
            android:icon="@drawable/ic_update_files"/>

        <item android:id="@+id/setting_item"
            android:title="@string/settings"
            android:icon="@drawable/ic_setting"/>


        <item android:id="@+id/about_item"
            android:title="@string/about"
            android:icon="@drawable/ic_about"/>
    </group>

</menu>